--- a/app/views/admin/portadas/search_post.js.haml
+++ b/app/views/admin/portadas/search_post.js.haml
@@ -1,5 +1,8 @@
-console.log('alive')
 - unless @posts.empty?
-  - radio = @type == "especial" ? true : false
-  $(".search-news##{@type} table tbody").html("#{escape_javascript(render partial: 'admin/portadas/search_res', collection: @posts, as: 'post', locals: { radio: radio })}")
+  - radio = ["especial","weather", "dod", "police-dod"].include?(@type) ? true : false
+  - if radio
+    - type = @type
+  - else
+    - type = "none"
+  $(".search-news##{@type} table tbody").html("#{escape_javascript(render partial: 'admin/portadas/search_res', collection: @posts, as: 'post', locals: { radio: radio, type: type })}")
   $( ".draggable" ).draggable({ connectToSortable: ".droppable", helper: "clone", revert: "invalid" });
