--- a/app/views/portada/_dato_del_dia.html.slim
+++ b/app/views/portada/_dato_del_dia.html.slim
@@ -1,4 +1,6 @@
-.dato-del-dia.banners
-  h2.titulo-bloque Dato del día
-  a href="#"
-    = raw @portada.datodeldia
+- if @portada.dod_notes.any?
+  - if @portada.police_notes.last.post
+    .dato-del-dia.banners
+      h2.titulo-bloque Dato del día
+      = link_to main_app.post_path(*@portada.dod_notes.last.post.url_params) do
+        = raw @portada.dod_notes.last.title
