--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -41,9 +41,9 @@ html
             li= link_to 'Ventas','#', class: 'bigger'
             li= link_to 'Contáctanos','#'
           = link_to '#', class: 'radio-levy' do
-            = image_tag('radiolevy.jpg', width: '100')
+            = image_tag('transparent.png', width: '100', class: 'lazy', "data-original" => '/assets/radiolevy.jpg')
         .span5
-          = image_tag('estaciones.png')
+          = image_tag("transparent.png", class: 'lazy',"data-original" => '/assets/estaciones.png')
         .span3
           .fb-like data-font="trebuchet ms" data-href="https://www.facebook.com/angelguardianmx" data-layout="button_count" data-send="false" data-show-faces="false" data-width="450"
           br
