--- a/app/views/crowdblog/esnoticia/show.html.haml
+++ b/app/views/crowdblog/esnoticia/show.html.haml
@@ -10,7 +10,7 @@
         %article.noticia-b
           .header
             %p.cintillo= post.cintillo
-            = image_tag(post.image.size_b, class: 'size-b')
+            = image_tag('transparent.png', class: 'size-b lazy', 'data-original' => post.image.size_b)
             %h2
               = link_to post.title, main_app.post_path(*post.url_params)
             %p.date= post.date_and_hour
@@ -41,7 +41,7 @@
         %article.noticia-b
           .header
             %p.cintillo= post.cintillo
-            = image_tag( post.image.size_b, class: 'size-b')
+            = image_tag('transparent.png', class: 'size-b lazy', 'data-original' => post.image.size_b)
             %h2
               = link_to post.title, main_app.post_path(*post.url_params)
             %p.date= post.date_and_hour
@@ -50,7 +50,7 @@
         %article.noticia-b
           .header
             %p.cintillo= post.cintillo
-            = image_tag(post.image.size_b, class: 'size-b')
+            = image_tag('transparent.png', class: 'size-b lazy', 'data-original' => post.image.size_b)
             %h2
               = link_to post.title, main_app.post_path(*post.url_params)
             %p.date= post.date_and_hour
@@ -69,7 +69,7 @@
 
     .column
       .es-noticia
-        = link_to image_tag('/assets/banners/banner_b_tags.png'), '#'
+        = link_to image_tag('transparent.png', class: 'lazy', 'data-original' => '/assets/banners/banner_b_tags.png'), '#'
       %article.resumen
         %h2.titulo-bloque Resumen
         = raw @portada.soundcloud_frame
