--- a/app/views/portada/_right_banners.html.slim
+++ b/app/views/portada/_right_banners.html.slim
@@ -1,3 +1,3 @@
 - ['c','d','f','g','h','j','k'].each do |key|
-  = image_tag("/assets/banners/banner_#{key}.gif")
+  = image_tag('transparent.png', class: 'lazy', "data-original" => "/assets/banners/banner_#{key}.gif")
 
