add souncloud frame to the bottom of the page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,7 @@ html
       = render 'header'
       = yield
       = render 'categories_summary'
+      = render 'soundcloud_resume'
       = render 'footer'
 
 
