--- a/app/assets/stylesheets/blog/categories_summary.css.less
+++ b/app/assets/stylesheets/blog/categories_summary.css.less
@@ -1,4 +1,5 @@
 section.categories_summary {
+  margin-top: 60px;
   h4 {
     background: #7F7F7F;
     padding: 2px 10px;
@@ -69,5 +70,14 @@ section.categories_summary {
       -moz-border-radius: 2px;
       border-radius: 2px;
     }
+  }
+}
+.wide-resumen {
+  text-align: center;
+  h4 {
+    top: -44px;
+    position: relative;
+    margin-bottom: -40px;
+    padding: 0 18px;
   }
 }
