--- a/app/views/crowdblog/posts/_facebook.html.slim
+++ b/app/views/crowdblog/posts/_facebook.html.slim
@@ -1,1 +1,1 @@
-iframe src="http://www.facebook.com/plugins/like.php?href=#{url}" scrolling="no" frameborder="0" style="height: 80px; width: 100%" allowTransparency="true"
+.fb-like data-font="lucida grande" data-href="#{url}" data-layout="button_count" data-send="false" data-show-faces="true" data-width="10"
