--- a/app/views/crowdblog/posts/_post.html.slim
+++ b/app/views/crowdblog/posts/_post.html.slim
@@ -1,25 +1,35 @@
 .post
   .header
     .row
-      .span1.author-info
-        = image_tag post.gravatar_url, class: 'img-circle'
-      .span3.author-info
-        .author #{link_to post.author_name, main_app.posts_by_author_path(post.author.to_param)}
-        .email #{post.author_email}
-        .date #{post.formatted_published_date}
-      .title
-        h1
-          = link_to post.title, main_app.post_path(*post.url_params)
+      .post-info.pull-left.span6
+        .title
+          h1
+            = link_to post.title, main_app.post_path(*post.url_params)
+        .author-info
+          .author #{link_to post.author_name, main_app.posts_by_author_path(post.author.to_param)}
+          .email #{post.author_email}
+          .date #{post.formatted_published_date}
+      = image_tag('transparent.png', class: 'size-a lazy pull-right', "data-original" => post.image.size_a)
+
+
+  .social
+    .tweet= render 'crowdblog/posts/twitter'
+    .facebook= render 'crowdblog/posts/facebook', url: main_app.post_url(*post.url_params)
 
   .body
     .inner
-      = image_tag(post.image.size_a, class: 'size-a pull-left')
       = post.html_body
+  - if post.related.any?
+    .related.pull-right
+      h3 Relacionadas
+      - post.related.each do |related|
+        .related-post
+          .img-container= image_tag('transparent.png', class: 'size-b lazy img-circle', "data-original" => related.image.size_b)
+          .clearfix
+          = link_to related.title, main_app.post_path(*related.url_params)
+
+
+
   - if index_view
     .links
       = link_to 'Comments', main_app.post_path(*post.url_params) + '#disqus_thread'
-  - else
-    .social
-      .tweet.span2= render 'crowdblog/posts/twitter'
-      .plusone.span3= render 'crowdblog/posts/plusone'
-      .facebook.span3= render 'crowdblog/posts/facebook', url: main_app.post_url(*post.url_params)
