--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -74,18 +74,7 @@
         font-size: 11px;
         margin-top: 6px;
       }
-      .lectura-rapida {
-        color: white;
-        background: #396DB3;
-        border: 1px solid #5181BA;
-        padding: 2px 5px;
-        text-transform: uppercase;
-        font-size: 9px;
-        .border-radius(2px);
-        &:hover {
-          text-decoration: none;
-        }
-      }
+
       .resumen {font-size: 13px;}
     }
 
@@ -336,5 +325,23 @@ h2.titulo-tag {
 .portada.esnoticia {
   h1 {
     text-align: center;
+  }
+}
+
+.lectura-rapida {
+  color: white;
+  background: #396DB3;
+  border: 1px solid #5181BA;
+  padding: 2px 5px;
+  text-transform: uppercase;
+  font-size: 9px;
+  .border-radius(2px);
+  &:hover {
+    text-decoration: none;
+    color: white;
+  }
+
+  &.big{
+    font-size: 12px;
   }
 }
