add subcategories post to categories page

--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -320,6 +320,29 @@ h2.titulo-tag {
     background-color: #F1FBE6;
     min-height: 350px;
     margin-bottom: 20px;
+    box-sizing: border-box;
+    padding: 20px 10px;
+    .box {
+      border-bottom: 1px solid #D0D4C3;
+      padding-bottom: 10px;
+    }
+
+    h4 {
+      color: black;
+      font-size: 21px;
+    }
+    ul {
+      margin: 0;
+      padding: 0;
+      li {
+        list-style: none;
+        margin-left: 5px;
+        a {
+          color: #000000;
+        }
+      }
+
+    }
   }
 }
 .portada.esnoticia {
