--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -8,7 +8,7 @@ header
         |
           guardián.mx
     - if @category
-      h3= @category
+      h3= @category.name
     .search class="#{@category ? 'inner-pages' : '' }"
       = image_tag('header/search-icon.gif', class: 'search-label')
       = text_field_tag 'search'
