--- a/app/views/portadas/show.html.haml
+++ b/app/views/portadas/show.html.haml
@@ -8,4 +8,5 @@
   = render 'portada/section_b'
   = link_to image_tag('banners/banner_i.gif'), '#', class: 'banners'
   = render 'portada/sociales'
+  = link_to image_tag('banners/banner_l.gif'), '#', class: 'banners'
   = render 'portada/policiacas'
