--- a/app/assets/stylesheets/blog/portada.css.less
+++ b/app/assets/stylesheets/blog/portada.css.less
@@ -1,7 +1,7 @@
 @import 'twitter/bootstrap/mixins';
 .content {
   section article {
-    border-bottom: 2px solid rgb(234, 236, 255);
+    border-bottom: 2px solid #F2F2F2;
     padding-bottom: 10px;
     margin-bottom: 10px;
     .header {
@@ -124,7 +124,7 @@
       width: 380px;
       padding-right: 10px;
       margin-right: 10px;
-      border-right: 2px solid rgb(234, 236, 255);
+      border-right: 2px solid #F2F2F2;
       &:last-child {
         padding-right: 0;
         border-right: none;
@@ -367,4 +367,33 @@ h2.titulo-tag {
   &.big{
     font-size: 12px;
   }
+}
+
+.opinion {
+
+  h2.titulo-bloque {padding: 0 20px}
+  .vlog-last {
+    border-bottom: none;
+    .resumen {background: none}
+  }
+  .vlog {
+    text-align: center;
+    width: 180px;
+    height: 63px;
+    float: left;
+    margin-right: 20px;
+    border-bottom: 1px solid #C0C4C7;
+    &:nth-child(2n+0) {
+      margin-right: 0;
+    }
+    &:nth-child(n+3) {
+      border-bottom: none;
+    }
+
+    .author {
+      color: #C0C4C7;
+      font-weight: bold;
+    }
+  }
+
 }
