--- a/app/views/portada/_sociales.html.slim
+++ b/app/views/portada/_sociales.html.slim
@@ -1,1 +1,19 @@
-/sociales.html.slim
+section.opinion
+  .column
+    h2.titulo-bloque Vlog
+    article.vlog-last
+      .header
+        h4= @vlogs.first.title
+        .resumen= @vlogs.first.cintillo
+        .video= raw @vlogs.first.resumen
+    article.latest-vlogs
+      - (1..4).each do |i|
+        .vlog
+          .author= @vlogs[i].title
+          .resuemn= @vlogs[i].cintillo
+      .clearfix
+
+
+
+
+  .column
